[gd_scene load_steps=13 format=2]

[ext_resource path="res://main/interface/title_screen.gd" type="Script" id=1]
[ext_resource path="res://main/interface/KGRedHands.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://main/theme/theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=7]
size = 48
outline_color = Color( 1, 0.631373, 0.156863, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
resource_name = "hi"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -4, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, -4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.21, 0.789333, 1, 1 )
border_width_bottom = 4
border_color = Color( 0.1068, 0.441114, 0.89, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 20
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.105882, 0.439216, 0.890196, 1 )
border_color = Color( 0.105882, 0.439216, 0.890196, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 20
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.156863, 0.658824, 1, 1 )
border_width_bottom = 4
border_color = Color( 0.1068, 0.441114, 0.89, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 20
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.61625, 1, 0.36, 1 )
border_width_bottom = 4
border_color = Color( 0.1292, 0.68, 0.41378, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 20
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.129412, 0.678431, 0.415686, 1 )
border_color = Color( 0.129412, 0.678431, 0.415686, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 20
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.315, 0.9, 0.4125, 1 )
border_width_bottom = 4
border_color = Color( 0.1292, 0.68, 0.41378, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 20
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[node name="TitleScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.41
anchor_right = 0.5
anchor_bottom = 0.41
margin_left = -320.0
margin_top = -32.0
margin_right = 320.0
margin_bottom = 32.0
rect_min_size = Vector2( 319.902, 32 )
rect_pivot_offset = Vector2( 320, 32 )
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_constants/shadow_offset_x = -1
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 7 )
text = "Railway Rider"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
autoplay = "hi"
playback_speed = 0.5
anims/RESET = SubResource( 8 )
anims/hi = SubResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.63
anchor_right = 0.5
anchor_bottom = 0.63
margin_left = -50.0
margin_top = -30.5
margin_right = 50.0
margin_bottom = 30.5
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 9

[node name="PlayButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Play"

[node name="HelpButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 35.0
margin_right = 100.0
margin_bottom = 61.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
enabled_focus_mode = 0
text = "Help"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 70.0
margin_right = 100.0
margin_bottom = 96.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 2
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 14 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
enabled_focus_mode = 0
text = "Credits"

[node name="HighScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -117.5
margin_top = -60.0
margin_right = 117.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Your high score: 0000000
Total coins: 000"
align = 1

[node name="Tween" type="Tween" parent="."]
